--- a/document/book.bib
+++ b/document/book.bib
@@ -3216,4 +3216,135 @@ On the basis of instrument-specific~}
   year = {2015}
 }
 
+@article{bornsteinAttributionDiscountingPerceptual1994,
+  title = {The {{Attribution}} and {{Discounting}} of {{Perceptual Fluency}}: {{Preliminary Tests}} of a {{Perceptual Fluency}}/{{Attributional Model}} of the {{Mere Exposure Effect}}},
+  volume = {12},
+  issn = {0278-016X},
+  shorttitle = {The {{Attribution}} and {{Discounting}} of {{Perceptual Fluency}}},
+  doi = {10.1521/soco.1994.12.2.103},
+  language = {en},
+  number = {2},
+  journal = {Social Cognition},
+  author = {Bornstein, Robert F. and D'Agostino, Paul R.},
+  month = jun,
+  year = {1994},
+  pages = {103-128},
+  file = {/Users/davidjohnbaker/Zotero/storage/3IHTGDZ2/Bornstein and D'Agostino - 1994 - The Attribution and Discounting of Perceptual Flue.pdf}
+}
+
+@article{chenetteReframingAuralSkills2019,
+  title = {Reframing {{Aural Skills Instruction Based On Research}} in {{Working Memory}}},
+  language = {en},
+  journal = {Journal for Music Theory Pedagogy},
+  author = {Chenette, Timothy K},
+  year = {2019},
+  pages = {18},
+  file = {/Users/davidjohnbaker/Zotero/storage/478ST2GI/Chenette - Reframing Aural Skills Instruction Based On Resear.pdf}
+}
+
+@article{mcauleyPlayItAgain2004,
+  title = {Play It Again: Did This Melody Occur More Frequently or Was It Heard More Recently? {{The}} Role of Stimulus Familiarity in Episodic Recognition of Music},
+  volume = {116},
+  issn = {00016918},
+  shorttitle = {Play It Again},
+  doi = {10.1016/j.actpsy.2004.02.001},
+  abstract = {Episodic recognition of novel and familiar melodies was examined by asking participants to make judgments about the recency and frequency of presentation of melodies over the course of two days of testing. For novel melodies, recency judgments were poor and participants often confused the number of presentations of a melody with its day of presentation; melodies heard frequently were judged as have been heard more recently than they actually were. For familiar melodies, recency judgments were much more accurate and the number of presentations of a melody helped rather than hindered performance. Frequency judgments were generally more accurate than recency judgments and did not demonstrate the same interaction with musical familiarity. Overall, these findings suggest that (1) episodic recognition of novel melodies is based more on a generalized ``feeling of familiarity'' than on a specific episodic memory, (2) frequency information contributes more strongly to this generalized memory than recency information, and (3) the formation of an episodic memory for a melody depends either on the overall familiarity of the stimulus or the availability of a verbal label.},
+  language = {en},
+  number = {1},
+  journal = {Acta Psychologica},
+  author = {McAuley, J.Devin and Stevens, Catherine and Humphreys, Michael S.},
+  month = may,
+  year = {2004},
+  pages = {93-108},
+  file = {/Users/davidjohnbaker/Zotero/storage/DH2F8A3K/McAuley et al. - 2004 - Play it again did this melody occur more frequent.pdf}
+}
+
+@article{korenmanRoleFamiliarityEpisodic2004,
+  title = {The {{Role}} of {{Familiarity}} in {{Episodic Memory}} and {{Metamemory}} for {{Music}}.},
+  volume = {30},
+  issn = {1939-1285, 0278-7393},
+  doi = {10.1037/0278-7393.30.4.917},
+  language = {en},
+  number = {4},
+  journal = {Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  author = {Korenman, Lisa M. and Peynircio{\u g}lu, Zehra F.},
+  year = {2004},
+  pages = {917-922},
+  file = {/Users/davidjohnbaker/Zotero/storage/LZBH7WUD/Korenman and Peynircioğlu - 2004 - The Role of Familiarity in Episodic Memory and Met.pdf}
+}
+
+@article{munganLevelsofProcessingEffectsRemember2011,
+  title = {Levels-of-{{Processing Effects}} on ``{{Remember}}'' {{Responses}} in {{Recognition}} for {{Familiar}} and {{Unfamiliar Tunes}}},
+  volume = {124},
+  issn = {00029556},
+  doi = {10.5406/amerjpsyc.124.1.0037},
+  language = {en},
+  number = {1},
+  journal = {The American Journal of Psychology},
+  author = {{Mungan} and {Peynirvioglu} and {Halpern}},
+  year = {2011},
+  pages = {37},
+  file = {/Users/davidjohnbaker/Zotero/storage/KMPNALRH/Mungan et al. - 2011 - Levels-of-Processing Effects on “Remember” Respons.pdf}
+}
+
+@article{harrisonApplyingModernPsychometric2017a,
+  title = {Applying Modern Psychometric Techniques to Melodic Discrimination Testing: {{Item}} Response Theory, Computerised Adaptive Testing, and Automatic Item Generation},
+  volume = {7},
+  issn = {2045-2322},
+  shorttitle = {Applying Modern Psychometric Techniques to Melodic Discrimination Testing},
+  doi = {10.1038/s41598-017-03586-z},
+  language = {en},
+  number = {1},
+  journal = {Scientific Reports},
+  author = {Harrison, Peter M. C. and Collins, Tom and M\"ullensiefen, Daniel},
+  month = dec,
+  year = {2017},
+  file = {/Users/davidjohnbaker/Zotero/storage/GEPJHRI2/Harrison et al. - 2017 - Applying modern psychometric techniques to melodic.pdf}
+}
+
+@article{rohrmeierImplicitLearningAcquisition2012,
+  title = {Implicit {{Learning}} and {{Acquisition}} of {{Music}}},
+  volume = {4},
+  issn = {17568757},
+  doi = {10.1111/j.1756-8765.2012.01223.x},
+  abstract = {Implicit learning is a core process for the acquisition of a complex, rule-based environment from mere interaction, such as motor action, skill acquisition, or language. A body of evidence suggests that implicit knowledge governs music acquisition and perception in nonmusicians and musicians, and that both expert and nonexpert participants acquire complex melodic, harmonic, and other features from mere exposure. While current findings and computational modeling largely support the learning of chunks, some results indicate learning of more complex structures. Despite the body of evidence, more research is required to support the cross-cultural validity of implicit learning and to show that core and more complex music theoretical features are acquired implicitly.},
+  language = {en},
+  number = {4},
+  journal = {Topics in Cognitive Science},
+  author = {Rohrmeier, Martin and Rebuschat, Patrick},
+  month = oct,
+  year = {2012},
+  pages = {525-553},
+  file = {/Users/davidjohnbaker/Zotero/storage/C85NHBFM/Rohrmeier and Rebuschat - 2012 - Implicit Learning and Acquisition of Music.pdf}
+}
+
+@article{ettlingerImplicitMemoryMusic2011,
+  title = {Implicit {{Memory}} in {{Music}} and {{Language}}},
+  volume = {2},
+  issn = {1664-1078},
+  doi = {10.3389/fpsyg.2011.00211},
+  abstract = {Research on music and language in recent decades has focused on their overlapping neurophysiological, perceptual, and cognitive underpinnings, ranging from the mechanism for encoding basic auditory cues to the mechanism for detecting violations in phrase structure. These overlaps have most often been identified in musicians with musical knowledge that was acquired explicitly, through formal training. In this paper, we review independent bodies of work in music and language that suggest an important role for implicitly acquired knowledge, implicit memory, and their associated neural structures in the acquisition of linguistic or musical grammar. These findings motivate potential new work that examines music and language comparatively in the context of the implicit memory system.},
+  language = {en},
+  journal = {Frontiers in Psychology},
+  author = {Ettlinger, Marc and Margulis, Elizabeth H. and Wong, Patrick C. M.},
+  year = {2011},
+  file = {/Users/davidjohnbaker/Zotero/storage/WFFYZVCK/Ettlinger et al. - 2011 - Implicit Memory in Music and Language.pdf}
+}
+
+@incollection{hambrickDomainGeneralModelsExpertise2019,
+  title = {Domain-{{General Models}} of {{Expertise}}: {{The Role}} of {{Cognitive Ability}}},
+  isbn = {978-0-19-879587-2},
+  shorttitle = {Domain-{{General Models}} of {{Expertise}}},
+  language = {en},
+  booktitle = {The {{Oxford Handbook}} of {{Expertise}}},
+  publisher = {{Oxford University Press}},
+  author = {Hambrick, David Z. and Burgoyne, Alexander P. and Oswald, Frederick L.},
+  editor = {Ward, Paul and Maarten Schraagen, Jan and Gore, Julie and Roth, Emilie},
+  collaborator = {Hambrick, David Z. and Burgoyne, Alexander P. and Oswald, Frederick L.},
+  month = jan,
+  year = {2019},
+  file = {/Users/davidjohnbaker/Zotero/storage/L7H5GK8F/Hambrick et al. - 2019 - Domain-General Models of Expertise The Role of Co.pdf},
+  doi = {10.1093/oxfordhb/9780198795872.013.3}
+}
+
 
